[project]
name = "np-payments"
version = "0.1.0"
description = ""
authors = [
    {name = "Shalin Devkota",email = "shalin.devkota01@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
