[tool.poetry]
name = "np-payments"
version = "0.1.0"
description = "Python package for integrating with Nepalese payment gateways like esewa."
authors = [
    "Shalin Devkota <shalin.devkota01@gmail.com>"
]
license = "MIT"
readme = "README.md"
packages = [
    { include = "np_payments" }
]
homepage = "https://github.com/yourusername/np-payments"
repository = "https://github.com/yourusername/np-payments"
keywords = ["esewa", "khalti", "nepal", "payment", "sdk"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.12"
httpx = ">=0.28.1,<0.29.0"
pydantic = ">=2.11.7,<3.0.0"
twine = "^6.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"